# kamaji

./: .gitignore  README.md  ask-resources.json  pyproject.toml  skill.json
.ask/: ask-states.json
.github/workflows/: deploy-skill.yml
interactionModels/custom/: it-IT.json
kamaji/: kamaji.py
lambda/: lambda_function.py  language_strings.json  prompts.py  requirements.txt
lambda/constants/: __init__.py  intents.py  session_keys.py  slots.py
lambda/exceptions/: __init__.py  handlers.py
lambda/handlers/: __init__.py  amazon_intents.py  base.py  events.py  launch.py
lambda/interceptors/: __init__.py  localization.py  logging.py
lambda/utils/: __init__.py  attributes.py  date_utils.py
tests/: conftest.py  test_handlers.py  test_utils.py
