[tool.poetry]
name = "kamaji"
version = "0.1.0"
description = ""
authors = ["Pamela Gotti <pamela.gotti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.56"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
kamaji = "kamaji.kamaji:activity_heat_map"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
