[tool.poetry]
name = "kamaji"
version = "0.1.0"
description = ""
authors = ["Pamela Gotti <pamela.gotti@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
boto3 = "^1.24.56"
click = "^8.1.3"
pydantic = "^1.9.2"
pandas = "^1.4.3"
numpy = "^1.23.2"
Jinja2 = "^3.1.2"
matplot = "^0.1.9"
scipy = "^1.9.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"

[tool.poetry.scripts]
kamaji = "kamaji.kamaji:activities_heat_map"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
