[tool.poetry]
name = "kamaji"
version = "0.1.0"
description = ""
authors = ["Pamela Gotti <pamela.gotti@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
boto3 = "^1.26.0"
click = "^8.1.3"
pydantic = "^1.9.2"
pandas = "^1.4.3"
numpy = "^1.23.2"
Jinja2 = "^3.1.2"
matplot = "^0.1.9"
scipy = "^1.9.0"
seaborn = "^0.11.2"
ask-sdk-core = "^1.19.0"
ask-sdk-dynamodb-persistence-adapter = "^1.19.0"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
flake8 = "^5.0.4"
pytest = "^7.0.0"
pytest-mock = "^3.10.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lambda"]

[tool.poetry.scripts]
kamaji = "kamaji.kamaji:activities_heat_map"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
